--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -150,6 +150,35 @@
         <i class="fa fa-check-circle" aria-hidden="true"></i>Submit
       </button>
     </div>
+
+    <div id="resultsModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+            <h2 class="modal-title"><strong>Best Match</strong></h2>
+          </div>
+
+          <div class="modal-body">
+            <h2 id="matchName"></h2>
+            <img
+              id="matchImg"
+              src="https://via.placeholder.com/400x400"
+              alt="Image, if users doesn't show"
+            />
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript">
       $("#submit").on("click", function() {
         function validForm() {
